Outliner: Selection on collapsed row is inaccurate #82960

Closed
opened 2020-11-24 05:41:01 +01:00 by Nathan Craddock · 5 comments

After collapsing a row, the coordinates of the parent row become inaccurate. This is made clear by the hover highlights not appearing as expected, and selection becomes impossible or selects an unintended object.

It appears that the coordinates of the elements in the collapsed subtree have incorrect coordinates which causes outliner_find_item_at_x_in_row to report inaccurate data.

outliner-select-bug.mp4

To reproduce

  1. In the default startup scene, Select the cube in the outliner, then collapse Collection.
  2. Hover over the row icons next to Collection (Mesh, camera, light). The hover highlight should be slightly off.

This can be made more obvious by increasing the number of children in a collapsed row.

  1. Duplicate the default cube around 10 times.
  2. Select a later copy (like Cube.008)
  3. Collapse Collection
  4. Hover/Select the row icons. In this case the hover highlights for Collection fail to work

Introduced in: 15083

While that commit is when the bug was first introduced, later commits have made the issue more obvious and easy to reproduce.

After collapsing a row, the coordinates of the parent row become inaccurate. This is made clear by the hover highlights not appearing as expected, and selection becomes impossible or selects an unintended object. It appears that the coordinates of the elements in the collapsed subtree have incorrect coordinates which causes `outliner_find_item_at_x_in_row` to report inaccurate data. [outliner-select-bug.mp4](https://archive.blender.org/developer/F9363227/outliner-select-bug.mp4) To reproduce 1. In the default startup scene, Select the cube in the outliner, then collapse Collection. 2. Hover over the row icons next to Collection (Mesh, camera, light). The hover highlight should be slightly off. This can be made more obvious by increasing the number of children in a collapsed row. 1. Duplicate the default cube around 10 times. 2. Select a later copy (like Cube.008) 3. Collapse Collection 4. Hover/Select the row icons. In this case the hover highlights for Collection fail to work Introduced in: 15083 While that commit is when the bug was first introduced, later commits have made the issue more obvious and easy to reproduce.
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @natecraddock

Added subscriber: @natecraddock
Nathan Craddock changed title from Outliner: Selection on collapsed icon row fails to Outliner: Selection on collapsed row is inaccurate 2020-11-24 05:41:53 +01:00

This issue was referenced by afc1e3913a

This issue was referenced by afc1e3913a0d35628c76fe2229ff09585f4dc644

This issue was referenced by 7d25139eaf

This issue was referenced by 7d25139eaf4ab11e69d6adb2f436489eca016b64
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Nathan Craddock self-assigned this 2020-12-18 04:14:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82960
No description provided.